--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -3,3 +3,5 @@ $color-principal: #1A5F7A;
 $color-secundario: #57C5B6;
 $color-azul: #002B5B;
 $color-verdeagua: #159895;
+$fondo-gris: #F2F2F2;
+$fondo-azul: #1A5F7A;
