--- a/scss/layout/_media426.scss
+++ b/scss/layout/_media426.scss
@@ -15,15 +15,22 @@
         font-size: 1rem;
         font-weight: 100;
     }
-    .galeria-de-3{
+    .galeria-de-3x1{
         display: grid; 
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(9,1fr);
+        grid-template-columns: repeat(1,1fr);
+        grid-template-rows: repeat(3,1fr);
     }
     .galeria-de-2{
         grid-template-columns: 1fr;
         grid-template-rows: repeat(2,1fr);;
     }
+
+    .galeria-de-clientes{
+        display: grid; 
+        grid-template-columns: repeat(2,1fr);
+        grid-template-rows: repeat(3,1fr);
+    }
+
     footer{
         flex-direction: column;
         align-items: center;
