--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -18,5 +18,8 @@ repetir a los largo de todo el proyecto */
     /*grid-template-areas: $areas;*/
     justify-content: $content;
     align-content: $align;
+    max-width: 122rem;
+    width: 100%;
+    padding: 2rem;
 }
 
