--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -4,13 +4,17 @@ footer{
     padding: 2rem;
     color: white;
     font-size: 1.5rem;
-    font-weight: 100;
+    font-weight: 300;
     img{
         width: 30rem;
         height: 10rem;
     }
     a{
         color: white;
+        text-decoration: none;
+    }
+    a:hover {
+        color: $color-secundario;
     }
     li{
         list-style: none;
