--- a/scss/layout/_media426.scss
+++ b/scss/layout/_media426.scss
@@ -20,9 +20,10 @@
         grid-template-columns: repeat(1,1fr);
         grid-template-rows: repeat(3,1fr);
     }
-    .galeria-de-2{
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(2,1fr);;
+    .galeria-de-3x2{
+        display: grid; 
+        grid-template-columns: repeat(1,1fr);
+        grid-template-rows: repeat(6,1fr);
     }
 
     .galeria-de-clientes{
@@ -33,7 +34,6 @@
 
     footer{
         flex-direction: column;
-        align-items: center;
     }
     footer h3{
         font-weight: 200;
