--- a/scss/layout/_media768.scss
+++ b/scss/layout/_media768.scss
@@ -3,16 +3,17 @@
         flex-direction: column;
         align-items: center;
     }
-    
-    .galeria-de-3x3{
-        display: grid; 
-        grid-template-columns: repeat(2,1fr);
-        grid-template-rows: repeat(5,1fr);
+    .galeria-de-2{
+        grid-template-columns: 1fr;
+        // grid-template-rows: repeat(2,1fr);;
     }
 
     .galeria-de-clientes{
         display: grid; 
         grid-template-columns: repeat(3,1fr);
         grid-template-rows: repeat(2,1fr);
+    }
+    footer{
+        align-items: flex-start;
     }
 }
